--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.8",
     "@emotion/cache": "^11.5.0",
-    "@emotion/react": "^11.5.0",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.8.3",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
@@ -27,17 +28,18 @@
     "date-fns": "^2.25.0",
     "firebase": "^9.8.2",
     "formik": "^2.1.5",
+    "framer-motion": "^8.4.3",
     "history": "^5.0.0",
     "lodash.chunk": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.29.4",
-    "next": "^12.0.3-canary.7",
+    "next": "^13.1.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.0",
     "react-firebase-hooks": "^5.0.3",
     "react-perfect-scrollbar": "^1.5.8",
@@ -48,10 +50,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/node": "^17.0.41",
-    "@types/react": "^17.0.45",
+    "@types/node": "18.7.3",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3-canary.7",
+    "eslint-config-next": "^13.1.2",
     "typescript": "^4.7.3"
   }
 }
