--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "next": "^12.0.3-canary.7",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.0",
     "react-firebase-hooks": "^5.0.3",
     "react-perfect-scrollbar": "^1.5.8",
@@ -48,8 +48,9 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/node": "^17.0.41",
-    "@types/react": "^17.0.45",
+    "@types/node": "18.7.3",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3-canary.7",
     "typescript": "^4.7.3"
