--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-singleton-hook": "^3.3.0",
     "react-use-wizard": "^2.2.1",
     "styled-components": "^5.3.5",
+    "ts-mailgun": "^0.5.1",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
