--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "firebase": "^9.8.2",
+    "firebase-admin": "^11.5.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash.chunk": "^4.2.0",
